// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translateZ renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}

<div
    className="c0"
  />,
]
`;

exports[`translateZ renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: translateZ(hasnot);
  -ms-transform: translateZ(hasnot);
  transform: translateZ(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(has);
  -ms-transform: translateZ(has);
  transform: translateZ(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(hasnot);
  -ms-transform: translateZ(hasnot);
  transform: translateZ(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(has);
  -ms-transform: translateZ(has);
  transform: translateZ(has);
}

<div
    className="c0"
  />,
]
`;

exports[`translateZ renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: translateZ(invalid.path.1);
  -ms-transform: translateZ(invalid.path.1);
  transform: translateZ(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(invalid.path.1);
  -ms-transform: translateZ(invalid.path.1);
  transform: translateZ(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(invalid.path.1);
  -ms-transform: translateZ(invalid.path.1);
  transform: translateZ(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(invalid.path.1);
  -ms-transform: translateZ(invalid.path.1);
  transform: translateZ(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`translateZ renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: translateZ(-54881px);
  -ms-transform: translateZ(-54881px);
  transform: translateZ(-54881px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(-54881px);
  -ms-transform: translateZ(-54881px);
  transform: translateZ(-54881px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(-42365px);
  -ms-transform: translateZ(-42365px);
  transform: translateZ(-42365px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(-42365px);
  -ms-transform: translateZ(-42365px);
  transform: translateZ(-42365px);
}

<div
    className="c0"
  />,
]
`;

exports[`translateZ renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(July);
    -ms-transform: translateZ(July);
    transform: translateZ(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(August);
    -ms-transform: translateZ(August);
    transform: translateZ(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(September);
    -ms-transform: translateZ(September);
    transform: translateZ(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateZ(November);
    -ms-transform: translateZ(November);
    transform: translateZ(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(July);
    -ms-transform: translateZ(July);
    transform: translateZ(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(August);
    -ms-transform: translateZ(August);
    transform: translateZ(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(September);
    -ms-transform: translateZ(September);
    transform: translateZ(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateZ(November);
    -ms-transform: translateZ(November);
    transform: translateZ(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(May);
    -ms-transform: translateZ(May);
    transform: translateZ(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(June);
    -ms-transform: translateZ(June);
    transform: translateZ(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(April);
    -ms-transform: translateZ(April);
    transform: translateZ(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateZ(November);
    -ms-transform: translateZ(November);
    transform: translateZ(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(May);
    -ms-transform: translateZ(May);
    transform: translateZ(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(June);
    -ms-transform: translateZ(June);
    transform: translateZ(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: translateZ(April);
    -ms-transform: translateZ(April);
    transform: translateZ(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: translateZ(November);
    -ms-transform: translateZ(November);
    transform: translateZ(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`translateZ renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: translateZ(July);
    -ms-transform: translateZ(July);
    transform: translateZ(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateZ(August);
    -ms-transform: translateZ(August);
    transform: translateZ(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateZ(September);
    -ms-transform: translateZ(September);
    transform: translateZ(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateZ(November);
    -ms-transform: translateZ(November);
    transform: translateZ(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateZ(August);
    -ms-transform: translateZ(August);
    transform: translateZ(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: translateZ(July);
    -ms-transform: translateZ(July);
    transform: translateZ(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateZ(August);
    -ms-transform: translateZ(August);
    transform: translateZ(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateZ(September);
    -ms-transform: translateZ(September);
    transform: translateZ(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateZ(November);
    -ms-transform: translateZ(November);
    transform: translateZ(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateZ(August);
    -ms-transform: translateZ(August);
    transform: translateZ(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: translateZ(January);
    -ms-transform: translateZ(January);
    transform: translateZ(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateZ(December);
    -ms-transform: translateZ(December);
    transform: translateZ(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateZ(April);
    -ms-transform: translateZ(April);
    transform: translateZ(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateZ(May);
    -ms-transform: translateZ(May);
    transform: translateZ(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateZ(June);
    -ms-transform: translateZ(June);
    transform: translateZ(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: translateZ(January);
    -ms-transform: translateZ(January);
    transform: translateZ(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateZ(December);
    -ms-transform: translateZ(December);
    transform: translateZ(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: translateZ(April);
    -ms-transform: translateZ(April);
    transform: translateZ(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: translateZ(May);
    -ms-transform: translateZ(May);
    transform: translateZ(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: translateZ(June);
    -ms-transform: translateZ(June);
    transform: translateZ(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`translateZ renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: translateZ(54881px);
  -ms-transform: translateZ(54881px);
  transform: translateZ(54881px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(54881px);
  -ms-transform: translateZ(54881px);
  transform: translateZ(54881px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(42365px);
  -ms-transform: translateZ(42365px);
  transform: translateZ(42365px);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(42365px);
  -ms-transform: translateZ(42365px);
  transform: translateZ(42365px);
}

<div
    className="c0"
  />,
]
`;

exports[`translateZ renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: translateZ(July);
  -ms-transform: translateZ(July);
  transform: translateZ(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(July);
  -ms-transform: translateZ(July);
  transform: translateZ(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(June);
  -ms-transform: translateZ(June);
  transform: translateZ(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(June);
  -ms-transform: translateZ(June);
  transform: translateZ(June);
}

<div
    className="c0"
  />,
]
`;

exports[`translateZ renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: translateZ(DarkSlateBlue);
  -ms-transform: translateZ(DarkSlateBlue);
  transform: translateZ(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(DarkSlateBlue);
  -ms-transform: translateZ(DarkSlateBlue);
  transform: translateZ(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(DarkSlateBlue);
  -ms-transform: translateZ(DarkSlateBlue);
  transform: translateZ(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: translateZ(DarkSlateBlue);
  -ms-transform: translateZ(DarkSlateBlue);
  transform: translateZ(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
